--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
         <script src="report/controllers/reportConfig.js"></script>
         <script src="report/controllers/reportController.js"></script>
         <script src="report/controllers/reportsample.js"></script>
-
+        <script src="report/controllers/reportAttr.js"></script>
         
         <script src="services/userService.js"></script>
        
