--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
         <script src="report/controllers/reportController.js"></script>
         <script src="report/controllers/reportsample.js"></script>
         <script src="report/controllers/reportAttr.js"></script>
+        <script src="order/controllers/orderConfig.js"></script>
+        <script src="order/controllers/orderController.js"></script>
         
         <script src="services/userService.js"></script>
        
